Fix contrast text enllaços

--- a/css/estils.css
+++ b/css/estils.css
@@ -18,6 +18,10 @@ h1, h2 {
     color: midnightblue;
 }
 
+a {
+    color: darkslateblue;
+}
+
 /***********************/
 /**     Navegació     **/
 /***********************/
